shed-cluster/app/monitor/mimir/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8, 192.168.0.0/16
  namespace: monitor
  name: mimir-read
spec:
  ingressClassName: nginx
  rules:
    - host: mimir.${ROOT_DOMAIN}
      http:
        # check the api endpoints: 
        # https://grafana.com/docs/mimir/latest/operators-guide/reference-http-api/
        paths:
          - backend:
              service:
                name: mimir-query-frontend
                port:
                  number: 8080
            path: /prometheus
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8, 192.168.0.0/16
  namespace: monitor
  name: mimir-write
spec:
  ingressClassName: nginx
  rules:
    - host: mimir.${ROOT_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: mimir-distributor
                port:
                  number: 8080
            path: /api/v1/push
            pathType: Prefix
